# 2d-painting-projection-opencv

./: .gitignore  CMakeLists.txt  projection.cpp  readme.md  readply.hpp
